--- a/css/creative.css
+++ b/css/creative.css
@@ -233,9 +233,9 @@ header.masthead p {
   width: 100%;
   height: 100%;
   text-align: center;
-  opacity: 0;
+  opacity: 1;
   color: #212529;
-  background: rgba(240, 95, 64, 0.9);
+  background: #fff;
   -webkit-transition: all 0.2s;
   -moz-transition: all 0.2s;
   transition: all 0.2s;
@@ -266,7 +266,7 @@ header.masthead p {
 }
 
 .portfolio-box:hover .portfolio-box-caption {
-  opacity: 1;
+  opacity: 0;
 }
 
 .portfolio-box:focus {
