--- a/css/style.css
+++ b/css/style.css
@@ -12,3 +12,14 @@
 .p-0{
     padding-top: 100px;
 }
+
+.footer{
+    position: fixed;
+    left: 0;
+    bottom: 0;
+    width: 100%;
+    height: 80px;
+    background-color: #ffffff;
+    columns: #242424;;
+    text-align: center;
+}
